# GTK-get-started-guide

./: README.md  it.mijorus.gtk_getstarted.json  meson.build
data/: it.mijorus.gtk_getstarted.appdata.xml.in  it.mijorus.gtk_getstarted.desktop.in  it.mijorus.gtk_getstarted.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: get-started-guide.in  get_started_guide.gresource.xml  main.py  meson.build  window.py  window.ui
